Homework21.java